...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle">

                <ImageButton
                    android:id="@+id/imgBtnDateDec"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="?attr/selectableItemBackground"
                    android:padding="12dp"
                    app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

                <Button
                    android:id="@+id/btnDatePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackground"
                    android:drawableLeft="@drawable/ic_calendar_wednesday"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:text="DATE" />

                <ImageButton
                    android:id="@+id/imgBtnDateInc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="?attr/selectableItemBackground"
                    android:padding="12dp"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvCalBreakfast"
                        style="@style/HeaderCalories"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:gravity="end"
...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listBreakfast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Lunch -->
            <LinearLayout
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lunch"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvCalLunch"
                        style="@style/HeaderCalories"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:gravity="end"
...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listLunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Dinner -->
            <LinearLayout
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dinner"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvCalDinner"
                        style="@style/HeaderCalories"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:gravity="end"
...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listDinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Snack -->
            <LinearLayout
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvCalSnack"
                        style="@style/HeaderCalories"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:gravity="end"
...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listSnack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="72dp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
