...
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/number_of_servings"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/etAmount"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:text="1.0"
...
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/meal"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>
            </LinearLayout>

...
